modules/desktop_capture/window_capturer_win.cc
@@ -131,7 +131,7 @@ class WindowCapturerWin : public DesktopCapturer {
 
   DesktopSize previous_size_;
 
-  AeroChecker aero_checker_;
+  WindowCaptureHelperWin window_capture_helper_;
 
   // This map is used to avoid flickering for the case when SelectWindow() calls
   // are interleaved with Capture() calls.
@@ -151,6 +151,15 @@ bool WindowCapturerWin::GetSourceList(SourceList* sources) {
   // EnumWindows only enumerates root windows.
   if (!EnumWindows(&WindowsEnumerationHandler, param))
     return false;
+
+  for (auto it = result.begin(); it != result.end();) {
+    if (!window_capture_helper_.IsWindowOnCurrentDesktop(
+            reinterpret_cast<HWND>(it->id))) {
+      it = result.erase(it);
+    } else {
+      ++it;
+    }
+  }
   sources->swap(result);
 
   std::map<HWND, DesktopSize> new_map;
@@ -220,12 +229,11 @@ void WindowCapturerWin::CaptureFrame() {
     return;
   }
 
-  // Return a 1x1 black frame if the window is minimized or invisible, to match
-  // behavior on mace. Window can be temporarily invisible during the
-  // transition of full screen mode on/off.
+  // Return a 1x1 black frame if the window is minimized or invisible on current
+  // desktop, to match behavior on mace. Window can be temporarily invisible
+  // during the transition of full screen mode on/off.
   if (original_rect.is_empty() ||
-      IsIconic(window_) ||
-      !IsWindowVisible(window_)) {
+      !window_capture_helper_.IsWindowVisibleOnCurrentDesktop(window_)) {
     std::unique_ptr<DesktopFrame> frame(
         new BasicDesktopFrame(DesktopSize(1, 1)));
     memset(frame->data(), 0, frame->stride() * frame->size().height());
@@ -295,7 +303,8 @@ void WindowCapturerWin::CaptureFrame() {
   // capturing - it somehow affects what we get from BitBlt() on the subsequent
   // captures.
 
-  if (!aero_checker_.IsAeroEnabled() || !previous_size_.equals(frame->size())) {
+  if (!window_capture_helper_.IsAeroEnabled() ||
+      !previous_size_.equals(frame->size())) {
     result = PrintWindow(window_, mem_dc, 0);
   }
 
